--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,19 @@
 Package: herehelper
 Type: Package
 Title: What the Package Does (Title Case)
-Version: 0.1.0
+Version: 0.1.0.900
 Author: Who wrote it
 Maintainer: The package maintainer <yourself@somewhere.net>
 Description: More about what it does (maybe more than one line)
     Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
+RoxygenNote: 7.1.1
+Imports: 
+    rstudioapi (>= 0.11),
+    stringr (>= 1.4)
+Suggests: 
+    testthat,
+    spelling
+Language: en-US
